--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
 }
 #app {
-    width: 200px;
-    height: 200px;
+    width: 160px;
+    height: 160px;
+}
+.lcontainer {
+    margin: 8px 16px;
 }
